--- a/langs/ko.json
+++ b/langs/ko.json
@@ -8,7 +8,25 @@
                 "info": "Information",
                 "help": "Help"
             }
-        }, "nickname": "닉네임",
+        }, "uuid": {
+            "title": "마인크래프트 UUID 조회",
+            "description": "마인크래프트 UUID으로 유저정보를 찾아볼 수 있습니다.",
+            "menu": {
+                "search": "Search",
+                "info": "Information",
+                "help": "Help"
+            }
+        }, "history": {
+            "title": "마인크래프트 닉네임 변경이력 조회",
+            "description": "마인크래프트 UUID으로 닉네임 변경기록을 찾아볼 수 있습니다.",
+            "time":"변경 시점",
+            "menu": {
+                "search": "Search",
+                "info": "Information",
+                "help": "Help"
+            }
+        }
+        , "nickname": "닉네임",
         "search": "조회",
         "wait": "유저를 찾고 있습니다. 잠시만 기다려주세요.",
         "error": {
